// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBadge should render correctly 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge "
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with a "centered" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge  bpk-badge--centered"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "left" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge  bpk-badge--docked-left"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "right" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge  bpk-badge--docked-right"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with an icon 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge "
  >
    <svg
      height="16"
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1.802 6.623l6.279 3.676a1.107 1.107 0 001.317-.205L12.75 6.75c.32-.326-.336-.632-.782-.716l-8.274-1.69a1.111 1.111 0 00-1 .317L1.664 5.71a.58.58 0 00.138.913z"
      />
      <path
        d="M6.125 15.085a1.114 1.114 0 00.973-.321l11.77-11.995a4.28 4.28 0 012.13-1.197l.201-.043a1.049 1.049 0 011.273 1.296l-.043.206a4.408 4.408 0 01-1.175 2.17L17.45 9.078a1.16 1.16 0 00-.31 1.016l1.742 9.732a1.16 1.16 0 01-.3 1.069l-1.008 1.026a.557.557 0 01-.896-.14l-3.664-7.13a.557.557 0 00-.896-.14l-2.59 2.64a1.158 1.158 0 00-.297 1.085l.662 2.746a1.475 1.475 0 01-.86 1.399h-.001a1.1 1.1 0 01-1.529-.547L6.29 18.822a1.725 1.725 0 00-.791-.807l-3.212-.951a1.163 1.163 0 01-.542-1.537 1.432 1.432 0 011.375-.93l3.006.488z"
      />
    </svg>
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="brand" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--brand"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="destructive" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--destructive"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="inverse" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--inverse"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="light" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--light"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="outline" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--outline"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="strong" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--strong"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="success" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--success"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="warning" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge "
  >
    Promociando
  </span>
</DocumentFragment>
`;
